RESOLVED FIXED149108
Eden GC should not try to jettison old CodeBlocks in the remembered set
https://bugs.webkit.org/show_bug.cgi?id=149108
Summary Eden GC should not try to jettison old CodeBlocks in the remembered set
Geoffrey Garen
Reported 2015-09-13 14:49:48 PDT
Eden GC should not jettison old CodeBlocks
Attachments
Patch (4.27 KB, patch)
2015-09-13 15:07 PDT, Geoffrey Garen
saam: review+
Geoffrey Garen
Comment 1 2015-09-13 15:07:58 PDT
Saam Barati
Comment 2 2015-09-13 15:41:03 PDT
Comment on attachment 261091 [details] Patch r=me
Geoffrey Garen
Comment 3 2015-09-14 09:09:31 PDT
Note You need to log in before you can comment on or make changes to this bug.